k8s/minikube/services/ingress/ingress.yml
# minikube addons enable ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messenger-gateway
spec:
  ingressClassName: nginx
  rules:
    - host: messenger.com
      http:
        paths:
          - path: /api/*
            pathType: Prefix
            backend:
              service:
                name: authoriser-server
                port:
                  number: 80
          - path: /websocket*
            pathType: Prefix
            backend:
              service:
                name: websocket-server
                port:
                  number: 80
